--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,22 +8,44 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
-            android:allowBackup="true"
+            android:name=".OfutoonApp"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <provider
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="@string/file_provider_authority"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/provider_paths" />
+        </provider>
+        <activity android:name=".ui.HomeActivity"/>
+        <activity
+                android:name=".ui.LoginActivity"
+                android:launchMode="singleTop"
+                android:label="@string/title_activity_login">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data
+                        android:host="@string/oauth_redirect_host"
+                        android:scheme="@string/oauth_scheme"/>
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".ui.InitialActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-        </activity>
-        <activity
-                android:name=".LoginActivity"
-                android:label="@string/title_activity_login">
         </activity>
     </application>
 
