--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -53,25 +53,29 @@ def getProps(String file) {
 
 dependencies {
     ext {
-        support_library_version = '28.0.0'
+        appcompat_version = '1.1.0-alpha01'
+        material_version = '1.1.0-alpha02'
+        pallete_version = '1.0.0'
+        room_version = '2.1.0-alpha03'
+        annotation_version = '1.0.0'
+        exifinterface_version = '1.0.0'
         photoview_version = '2.1.4'
         glide_version = '4.8.0'
         retrofit_version = '2.5.0'
         okhttp_version = '3.11.0'
-        room_version = '1.1.1'
     }
-    implementation "com.android.support:appcompat-v7:$support_library_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "com.android.support:design:$support_library_version"
-    implementation "com.android.support:palette-v7:$support_library_version"
-    implementation "com.android.support:support-annotations:$support_library_version"
-    implementation "com.android.support:exifinterface:$support_library_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.palette:palette:$pallete_version"
+    implementation "androidx.annotation:annotation:$annotation_version"
+    implementation "androidx.exifinterface:exifinterface:$exifinterface_version"
 
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
-    testImplementation "android.arch.persistence.room:testing:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
 
     implementation "com.github.chrisbanes:PhotoView:$photoview_version"
 
@@ -86,6 +90,6 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
